# mathtools

./: Makefile.am  README  README.md  configure.ac
C/: Makefile.am  configure.ac
C++/: Makefile  Makefile.am  autogen.sh  configure.ac
C++/src/: derive.cpp  factor.cpp  factor.h  fract.cpp  fract.h  mathtools.cpp  primes.cpp  primes.h
C/src/: factor.c  primes.c
src/: factor.c  fract.c  mathtools  mathtools.c  primes.c
